SFUSA/force-app/main/default/objects/Single_Barrel_Calendar_Setting__mdt/fields/Event_Color__c.field-meta.xml
<CustomField>
        <fullName>Event_Color__c</fullName>
        <label>Event Color</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>