SFUSA/force-app/main/default/objects/Single_Barrel_Calendar_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
        <fullName>All_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Event_Color__c</columns>
        <columns>Event_Text_Color__c</columns>
        <columns>Plant__c</columns>
        <columns>Time_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </ListView>